add form to index.html

--- a/index.html
+++ b/index.html
@@ -27,12 +27,95 @@
                 <a class="nav-link" href="#varieties"><span class="var">Varieties</span></a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="order"><span class="var">Order</span></a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="contact.html"><span class="var">Contact Us</span></a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
+      <div class="container-fluid" id="Home">
+        <div class="container">
+          <div class="Initpage">
+            <div class="Inittext text-center">
+              <h1>Need a  pizza?</h1>
+              <h1>Order it now and will deliver it instantly!</h1>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container" id="varieties">
+        <div class="container">
+          <div class="Types">
+            <div class="typexpagrafs text-center">
+              <h2>We Have The Following Varieties:</h2>
+              <ul>
+                <li>Pizza Topping</li>
+                <li>Pizza Crust</li>
+                <li>Pizza Flavour</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid" id="order">
+        <div class="container">
+          <h1 class="text-center mt-5">Order Your Pizza</h1>
+          <div class="card mycard">
+            <div class="card-body">
+              <div id="wrapper">
+                <div id="inputs">
+                <div>
+              <form>
+                <form>
+                  <div class="form-group text-center myform">
+                    <label for="Selectyourpizzaflavour1">Select Your Pizza Flavour</label>
+                    <select class="form-control" id="pizzaflavour">
+                      <option>Select Pizza Flavour</option>
+                      <option value="300">Berry@Ksh 300</option>
+                      <option value="400">Butternut Squash@ Ksh.400</option>
+                      <option value="450">Chicken @Ksh 450</option>
+                      <option value="600">Hummus @Ksh 600</option>
+                      <option value="750">Turkish Ground @Ksh 750</option>
+                    </select>
+                  </div>
+                  <div class="form-group text-center myform">
+                    <label for="Chooseyourprefferedsize">Choose Your Preffered Size</label>
+                    <select class="form-control" id="pizzasize">
+                      <option>Select Pizza Size</option>
+                      <option value="500">Regular@Ksh 500</option>
+                      <option value="800">Medium @Ksh 800</option>
+                      <option value="1200">Large@Ksh 1200</option>
+                    </select>
+                  </div>
+                  <div class="form-group text-center myform">
+                    <label for="Chooseyourfavoritecrust">Choose Your Favorite Crust</label>
+                    <select class="form-control" id="pizzacrust" name="pizza">
+                      <option>Select Pizza Crust</option>
+                      <option value="150">Thin crust @Ksh.150</option>
+                      <option value="200">Thick crust @Ksh. 200</option>
+                      <option value="250" name="pizza">Deep crust @Ksh.250</option>
+                      <option value="300">Stuffed crust@Ksh 300</option>
+                    </select>
+                  </div>
+                  <div class="form-group text-center myform">
+                    <label for="Chooseyourfavoritetopping">Choose Your Favorite Topping</label>
+                    <select class="form-control" id="pizzatopping">
+                      <option>Select Pizza Toppings</option>
+                      <option value="150">onions @Ksh.150 </option>
+                      <option value="200">mushroom @ Ksh 200</option>
+                      <option value="320">bacon @ Ksh 320</option>
+                      <option value="400">black olives @Ksh 400</option>
+                    </select>
+                  </div>
+                  <div class="form-group text-center myform">
+                    <label for="number">Number of Pizza's</label>
+                    <input type="number" class="form-control" id="number" placeholder="Number of pizzas" min="1" max="infint"required>
+                  </div>
+              </form>
+                
     
 </body>
 </html>
