add footer to index.html

--- a/index.html
+++ b/index.html
@@ -116,6 +116,15 @@
                     <input type="number" class="form-control" id="number" placeholder="Number of pizzas" min="1" max="infint"required>
                   </div>
               </form>
+            <div>
+              <footer>
+                <div class="footer" id="contact us">
+                  <h1>@copy</h1>
+                  <h2>Towett Enock K.</h2>
+                  <H3>254724916032.</H3>
+                </div>
+              </footer>
+            </div>
                 
     
 </body>
