--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
       <div class="bar">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#"><span class="var">Home</span> <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#Home"><span class="var">Home</span> <span</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#varieties"><span class="var">Varieties</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="order"><span class="var">Order</span></a>
+            <a class="nav-link" href="#order"><span class="var">Order</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html"><span class="var">Contact Us</span></a>
+            <a class="nav-link" href="#contact-us"><span class="var">Contact Us</span></a>
           </li>
         </ul>
       </div>
@@ -130,7 +130,7 @@
   </div>
   <footer>
     <div class="footer" id="contact-us">
-      <h1>@copy</h1>
+      <h1>@copy:</h1>
       <h2>Towett Enock K.</h2>
       <H3>254724916032.</H3>
     </div>
