add button to index.html

--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
                         max="infint" required>
                     </div>
                   </form>
+                  <div class="text-center p-5">
+                    <button id="place-order" type="button" class="btn btn-success mybtn">PLACE YOUR ORDER</button>
+                  </div>
+                  <div class="text-center">
+                    <button id="make-delivery" type="button" class="btn btn-info mybtn">MAKE DELIVERY</button>
+                  </div>
               </div>
 
             </div>
