--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
       <div class="bar">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#Home"><span class="var">Home</span> <span</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#varieties"><span class="var">Varieties</span></a>
+            <a class="nav-link" href="#Home"><span class="var">Home</span>
+              <span</span> </a> </li> <li class="nav-item">
+                <a class="nav-link" href="#varieties"><span class="var">Varieties</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#order"><span class="var">Order</span></a>
@@ -138,7 +137,7 @@
     <div class="footer" id="contact-us">
       <h1>@copy:</h1>
       <h2>Towett Enock K.</h2>
-      <H3>254724916032.</H3>
+      <H3>+254724916032.</H3>
     </div>
   </footer>
 
