--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="new.js"></script>
   <link rel="stylesheet" href="./css/styles.css">
 
   <title>SNIPPER PIZZA CAFE</title>
@@ -140,6 +142,7 @@
       <H3>+254724916032.</H3>
     </div>
   </footer>
+  <script src="./js/script.js"></script>
 
 
 
