--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <div class="typexpagrafs text-center">
           <h2>We Have The Following Varieties:</h2>
           <ul>
-            <li>Pizza Topping</li>
-            <li>Pizza Crust</li>
-            <li>Pizza Flavour</li>
+            <a >Sicilian Pizza ,</a></li>
+            <a> Neapolitan Pizza and</a></li>
+            <a> Greek Pizza</a></li>
           </ul>
         </div>
       </div>
@@ -74,9 +74,9 @@
                 <form>
                   <form>
                     <div class="form-group text-center myform">
-                      <label for="Selectyourpizzaflavour1">Select Your Pizza Flavour</label>
+                      <label for="Selectyourpizzaflavour1">Choose Your Pizza Flavour</label>
                       <select class="form-control" id="pizzaflavour">
-                        <option>Select Pizza Flavour</option>
+                        <option>Example chicken @Ksh 450</option>
                         <option value="300">Berry@Ksh 300</option>
                         <option value="400">Butternut Squash@ Ksh.400</option>
                         <option value="450">Chicken @Ksh 450</option>
@@ -87,7 +87,7 @@
                     <div class="form-group text-center myform">
                       <label for="Chooseyourprefferedsize">Choose Your Preffered Size</label>
                       <select class="form-control" id="pizzasize">
-                        <option>Select Pizza Size</option>
+                        <option>Example regular@Ksh 500</option>
                         <option value="500">Regular@Ksh 500</option>
                         <option value="800">Medium @Ksh 800</option>
                         <option value="1200">Large@Ksh 1200</option>
@@ -96,7 +96,7 @@
                     <div class="form-group text-center myform">
                       <label for="Chooseyourfavoritecrust">Choose Your Favorite Crust</label>
                       <select class="form-control" id="pizzacrust" name="pizza">
-                        <option>Select Pizza Crust</option>
+                        <option>Example thin crust @Ksh.150</option>
                         <option value="150">Thin crust @Ksh.150</option>
                         <option value="200">Thick crust @Ksh. 200</option>
                         <option value="250" name="pizza">Deep crust @Ksh.250</option>
@@ -106,7 +106,7 @@
                     <div class="form-group text-center myform">
                       <label for="Chooseyourfavoritetopping">Choose Your Favorite Topping</label>
                       <select class="form-control" id="pizzatopping">
-                        <option>Select Pizza Toppings</option>
+                        <option>Example bacon @ Ksh 320 </option>
                         <option value="150">onions @Ksh.150 </option>
                         <option value="200">mushroom @ Ksh 200</option>
                         <option value="320">bacon @ Ksh 320</option>
@@ -130,6 +130,18 @@
             </div>
 
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid" id="Contact">
+    <div class="container">
+      <div class="Initpage">
+        <div class="Inittext text-center">
+          <h1><strong>CONTACT US</strong></h1>
+          <img src="./images/the-best-pizza-in-town.jpg">
+          <p>Snipper Pizza Cafe is located opposite QUICK-MATT SUPPERMARKET a long  Waiyaki High Way<br>P.O BOX 4004 Waruku-Nairobi<br>
+            You can reach us by through email:enookimuu@gmail.com</p>
         </div>
       </div>
     </div>
