--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  
   <link rel="stylesheet" href="./css/styles.css">
 
   <title>SNIPPER PIZZA CAFE</title>
@@ -55,7 +56,7 @@
         <div class="typexpagrafs text-center">
           <h2>We Have The Following Varieties:</h2>
           <ul>
-            <a >Sicilian Pizza ,</a></li>
+            <a>Sicilian Pizza ,</a></li>
             <a> Neapolitan Pizza and</a></li>
             <a> Greek Pizza</a></li>
           </ul>
@@ -76,7 +77,7 @@
                     <div class="form-group text-center myform">
                       <label for="Selectyourpizzaflavour1">Choose Your Pizza Flavour</label>
                       <select class="form-control" id="pizzaflavour">
-                        <option>Example chicken @Ksh 450</option>
+                        <option>Select Pizza Flavour</option>
                         <option value="300">Berry@Ksh 300</option>
                         <option value="400">Butternut Squash@ Ksh.400</option>
                         <option value="450">Chicken @Ksh 450</option>
@@ -87,26 +88,26 @@
                     <div class="form-group text-center myform">
                       <label for="Chooseyourprefferedsize">Choose Your Preffered Size</label>
                       <select class="form-control" id="pizzasize">
-                        <option>Example regular@Ksh 500</option>
-                        <option value="500">Regular@Ksh 500</option>
+                        <option>Select Pizza Size</option>
+                        <option value="500">Regular @Ksh 500</option>
                         <option value="800">Medium @Ksh 800</option>
-                        <option value="1200">Large@Ksh 1200</option>
+                        <option value="1200">Large @Ksh 1200</option>
                       </select>
                     </div>
                     <div class="form-group text-center myform">
                       <label for="Chooseyourfavoritecrust">Choose Your Favorite Crust</label>
                       <select class="form-control" id="pizzacrust" name="pizza">
-                        <option>Example thin crust @Ksh.150</option>
+                        <option>Select Pizza Crust</option>
                         <option value="150">Thin crust @Ksh.150</option>
                         <option value="200">Thick crust @Ksh. 200</option>
-                        <option value="250" name="pizza">Deep crust @Ksh.250</option>
-                        <option value="300">Stuffed crust@Ksh 300</option>
+                        <option value="250">Deep crust @Ksh.250</option>
+                        <option value="300">Stuffed crust @Ksh 300</option>
                       </select>
                     </div>
                     <div class="form-group text-center myform">
                       <label for="Chooseyourfavoritetopping">Choose Your Favorite Topping</label>
                       <select class="form-control" id="pizzatopping">
-                        <option>Example bacon @ Ksh 320 </option>
+                        <option>Select Pizza Toppings</option>
                         <option value="150">onions @Ksh.150 </option>
                         <option value="200">mushroom @ Ksh 200</option>
                         <option value="320">bacon @ Ksh 320</option>
@@ -120,7 +121,8 @@
                     </div>
                   </form>
                   <div class="text-center p-5">
-                    <button id="place-order" type="button" class="btn btn-success mybtn">ORDER</button>
+                    <button id="pick-up" type="button" class="btn btn-success mybtn">PICKUP</button>
+                    <!-- <button type="button" class="btn btn-success mybtn" onclick="getPick()">PICK UP</button> -->
                   </div>
                   <div class="text-center">
                     <button id="make-delivery" type="button" class="btn btn-info mybtn">MAKE DELIVERY</button>
@@ -134,13 +136,15 @@
       </div>
     </div>
   </div>
+
   <div class="container-fluid" id="Contact">
     <div class="container">
       <div class="Initpage">
         <div class="Inittext text-center">
           <h1><strong>CONTACT US</strong></h1>
-          <img src="./images/the-best-pizza-in-town.jpg">
-          <p>Snipper Pizza Cafe is located opposite QUICK-MATT SUPPERMARKET a long  Waiyaki High Way<br>P.O BOX 4004 Waruku-Nairobi<br>
+          <img src="./images/download (2).jpeg3">
+          <p>Snipper Pizza Cafe is located opposite QUICK-MATT SUPPERMARKET a long Waiyaki High Way<br>P.O BOX 4004
+            Waruku-Nairobi<br>
             You can reach us by through email:enookimuu@gmail.com</p>
         </div>
       </div>
@@ -150,14 +154,15 @@
     <div class="footer" id="contact-us">
       <h1>@copy:</h1>
       <h2>Towett Enock K.</h2>
-      <H3>+254724916032.</H3>
+      <h3>+254724916032.</h3>
     </div>
   </footer>
+  
+  <script src="./js/main.js"></script>
 
 
 
 </body>
-<script src="./js/main.js"></script>
 
 
 </html>
