add function to index.html

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     </div>
                   </form>
                   <div class="text-center p-5">
-                    <button id="pick-up" type="button" class="btn btn-success mybtn">PICKUP</button>
+                    <button id="pick-up" type="button" onclick="getPick()" class="btn btn-success mybtn">PICKUP</button>
                     <!-- <button type="button" class="btn btn-success mybtn" onclick="getPick()">PICK UP</button> -->
                   </div>
                   <div class="text-center">
