--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <ul>
             <a>Sicilian Pizza ,</a></li>
             <a> Neapolitan Pizza and</a></li>
-            <a> Greek Pizza</a></li>
+            <a> Greek Pizza.</a></li>
           </ul>
         </div>
       </div>
